--- a/src/base/static/scss/_sidebar.scss
+++ b/src/base/static/scss/_sidebar.scss
@@ -4,7 +4,6 @@
   overflow: auto;
   left: 0;
   z-index: 15;
-  height: 100%;
   background-color: #fff;
   opacity: 0.95;
   box-shadow: 0.325em 0 0 rgba(0, 0, 0, 0.1);
